--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 *.py[cod]
 
 # C extensions
@@ -17,6 +18,8 @@ develop-eggs
 .installed.cfg
 lib
 lib64
+*.log
+*~
 
 # Installer logs
 pip-log.txt
@@ -34,15 +37,13 @@ nosetests.xml
 .project
 .pydevproject
 
-.DS_Store
-*~
-*.pyc
-*.pyo
-env
+env26
 env27
-env3
+env30
 env32
 env33
+
+load-tests/*
 redis-*
 data/*
 dump.rdb
