--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ gunicorn==0.17.2
 wsgiref==0.1.2
 #uWSGI==1.4.4
 
-tornado-rest-handler==0.0.5
+git+git://github.com/paulocheque/tornado-rest-handler.git#egg=tornado-rest-handler
 
 mongoengine==0.7.9
 pymongo==2.4.2
@@ -19,7 +19,7 @@ git+git://github.com/nvie/rq-dashboard.git#egg=rq-dashboard
 #rq-scheduler==0.3.5
 git+git://github.com/ui/rq-scheduler.git#egg=rq-scheduler
 
-bottle==0.11.6
+#bottle==0.11.6
 #git+git://github.com/tnm/redweb.git#egg=redweb
 
 newrelic==1.10.0.28
