--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ tornado==3.0
 gunicorn==0.17.2
 wsgiref==0.1.2
 #uWSGI==1.4.4
+#bottle==0.11.6
 
 #git+git://github.com/paulocheque/python-rest-handler.git#egg=python-rest-handler
 #git+git://github.com/paulocheque/tornado-rest-handler.git#egg=tornado-rest-handler
-git+https://github.com/paulocheque/python-rest-handler.git#egg=python-rest-handler
-git+https://github.com/paulocheque/tornado-rest-handler.git#egg=tornado-rest-handler
+#git+https://github.com/paulocheque/python-rest-handler.git#egg=python-rest-handler
+#git+https://github.com/paulocheque/tornado-rest-handler.git#egg=tornado-rest-handler
+python-rest-handler==0.0.1
+tornado-rest-handler==0.0.6
 
 mongoengine==0.7.9
 pymongo==2.4.2
@@ -22,7 +25,6 @@ git+git://github.com/nvie/rq-dashboard.git#egg=rq-dashboard
 #rq-scheduler==0.3.5
 git+git://github.com/ui/rq-scheduler.git#egg=rq-scheduler
 
-#bottle==0.11.6
 #git+git://github.com/tnm/redweb.git#egg=redweb
 
 newrelic==1.10.0.28
