send grid library in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,10 +25,12 @@ git+git://github.com/ui/rq-scheduler.git#egg=rq-scheduler
 
 #git+git://github.com/tnm/redweb.git#egg=redweb
 
-newrelic==2.10.1.9
-
 simplejson==3.3.0
 jsonpickle==0.6.1
 #git+git://github.com/paulocheque/jsonpickle.git#egg=jsonpickle
 
 py-social==0.0.1
+
+newrelic==2.10.1.9
+sendgrid==0.2.5
+fabric==1.8.1
